# corridor_api

./: .gitignore  Cargo.toml  Dockerfile  README.md  db.sqlite3
migrations/2022-05-08-062829_create_users/: up.sql
src/: a_star_generic.rs  a_star_generic_safe.rs  abstarctions.rs  auth.rs  chess.rs  db.sqlite3  errors.rs  game_abstractions.rs  game_interface.rs  game_lobbies.rs  game_logic.rs  game_matches.rs  leader_board.rs  leaderboard.rs  main.rs  messages.rs  quoridor.rs  schema.rs  session.rs  sessions.rs  state.rs
src/auth/: auth.rs  mod.rs
src/game_logic/: components.rs  mod.rs
src/models/: mod.rs  schema.rs  users.rs
src/quoridor/: a_star.rs  cpu.rs  game.rs  mod.rs
static/: index.html  script.js  tsconfig.json
static/src/: functions.ts  script.ts
ui_solid/: README.md  package-lock.json  package.json
ui_solid/src/: App.tsx  AppViews.tsx  Auth.tsx  Chat.tsx  Footer.tsx  LoadAnimation.tsx  Lobby.tsx  Message.tsx  Nav.tsx  Profile.tsx  Quoridor.tsx  QuoridorEnd.tsx  Transition.tsx  index.css
ui_solid/src/functions/: auth.ts  chat.tsx  game_quoridor.ts  lobbies.tsx  utils.tsx
