[package]
name = "corridor_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
chrono = "0.4"
diesel = {version = "1.4.4", features = ["sqlite"]}
jsonwebtoken = "8"
pwhash = "1"
regex = "1"
rand = "0.8"
serde = "1"
a-star_traitbased = "0.1.2"