[package]
name = "corridor_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
regex = "1"
rand = "0.8"
serde = {version="1.0.152", features=["derive"]}
serde_json = "1.0.93"
a-star_traitbased = "0.1.3"
time = "0.3.11"
sled = "0.34.7"
axum = {version="0.6.10", features=["ws"]}
tower-cookies = "0.9.0"
tokio = {version="1.26.0", features=["rt", "macros", "rt-multi-thread"]}
bcrypt = "0.14.0"
magic-crypt = "3.1.12"
